syntax = "proto3";

package profile;

service ProfileService {
  rpc Upsert (UpsertRequest) returns (ProfileResponse);
  rpc View (ViewRequest) returns (ProfileResponse);
}

message UpsertRequest {
  string user_id = 1;
}

message ViewRequest {
  string user_id = 1;
}

message ProfileResponse {
  int64 profile_id = 1;
  int64 user_id = 2;
  string nickname = 3;
  int64 level = 4;
  int64 rating = 5;
  int64 experience = 6;
}
